Display menu button (#1992)
* Implement new menu which includes a debug log option

* Update wording

--- a/ext/css/display.css
+++ b/ext/css/display.css
@@ -1881,7 +1881,7 @@ button.footer-notification-close-button {
     display: none;
 }
 
-:root:not([data-debug=true]) .debug-info {
+:root:not([data-debug=true]) .action-button[data-action=menu] {
     display: none;
 }
 :root[data-anki-enabled=false] .action-button[data-action=view-note],
