Structured content links (#2089)
* Update CSS to JSON converter to generalize the remove-property comment

* Fix navigation not being updated when _clearContent is run

* Add structured content schema for link tags

* Add test links

* Add external-link icon

* Pass Display instance to DisplayContentManager

* Update structured content generation

* Update link styles

--- a/dev/data/structured-content-overrides.css
+++ b/dev/data/structured-content-overrides.css
@@ -54,3 +54,10 @@
     border-width: 1px;
     border-color: currentColor;
 }
+.gloss-link-text {
+    /* remove-rule */
+}
+.gloss-link-external-icon {
+    display: none;
+    /* remove-property background-color vertical-align width height margin-left background-color position */
+}
