--- a/dev/data/structured-content-overrides.css
+++ b/dev/data/structured-content-overrides.css
@@ -61,3 +61,16 @@
     display: none;
     /* remove-property background-color vertical-align width height margin-left background-color position */
 }
+.gloss-sc-ol,
+.gloss-sc-ul {
+    /* remove-property padding-left */
+}
+:root[data-glossary-layout-mode=compact] .gloss-sc-ul[data-sc-content=glossary] {
+    /* remove-rule */
+}
+:root[data-glossary-layout-mode=compact] .gloss-sc-ul[data-sc-content=glossary] .gloss-sc-li {
+    /* remove-rule */
+}
+:root[data-glossary-layout-mode=compact] .gloss-sc-ul[data-sc-content=glossary] .gloss-sc-li:not(:first-child)::before {
+    /* remove-rule */
+}
