Fix the color of links in display footer notifications (#2151)

--- a/ext/css/display.css
+++ b/ext/css/display.css
@@ -1719,6 +1719,9 @@ button.footer-notification-close-button {
 .tag-details-disambiguation-list>.tag-details-disambiguation:not(:last-child)::after {
     content: var(--disambiguation-separator);
 }
+.footer-notification a {
+    color: var(--notification-text-color);
+}
 
 
 /* Overlays */
