Add support for guiEditNote to view notes (#2143)
* Add AnkiConnect.guiEditNote

* Update _onApiNoteView to first try guiEditNote

* Add setting

* Update noteView API

* Use setting

* Return which mode was used

* Update DisplayGenerator

* Handle errors in DisplayAnki

* Update docs

* Add isErrorUnsupportedAction function

* Add an allowFallback option to noteView

* Disambiguate

* Simplify now that preferredMode isn't used

* Update settings info

* Implement test buttons

* Update styles

* Update status visibility

* Wrap layout

* Update description

* Update date

--- a/ext/css/settings.css
+++ b/ext/css/settings.css
@@ -2147,6 +2147,28 @@ button.hotkey-list-item-enabled-button[data-scope-count='0'] {
     display: none;
 }
 
+.test-anki-note-viewer-container {
+    margin-top: 0.85em;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: flex-start;
+}
+.test-anki-note-viewer-container>:nth-child(n+2) {
+    margin-left: 0.5em;
+}
+.test-anki-note-viewer-button {
+    flex: 0 0 auto;
+}
+.test-anki-note-viewer-results {
+    align-self: center;
+}
+.test-anki-note-viewer-results[data-success=true] {
+    color: var(--success-color);
+}
+.test-anki-note-viewer-results[data-success=false] {
+    color: var(--danger-color);
+}
+
 
 /* Dictionary settings */
 .dictionary-list {
