Collapsible dictionary updates (#2170)
* Add "force collapsed" and "force expanded" options

* Simplify "any" check

* Update style

* Add help modal for collapsible dictionaries

* Disable wrapping

--- a/ext/css/material.css
+++ b/ext/css/material.css
@@ -807,6 +807,10 @@ input[type=number].code,
 input[type=password].code {
     font-family: 'Courier New', Courier, monospace;
 }
+textarea.no-wrap {
+    white-space: pre;
+    overflow-wrap: normal;
+}
 
 /* Input groups */
 .input-group {
