--- a/ext/css/settings.css
+++ b/ext/css/settings.css
@@ -1714,8 +1714,11 @@ code.anki-field-marker {
 .scan-input-prefix-cell[data-property=search-options] {
     grid-area: 4/2/5/3;
 }
-.scan-input-prefix-cell[data-property=touch-pen-options] {
+.scan-input-prefix-cell[data-property=touch-options] {
     grid-area: 5/2/6/3;
+}
+.scan-input-prefix-cell[data-property=pen-options] {
+    grid-area: 6/2/7/3;
 }
 .scan-input-content-cell[data-property=include] {
     grid-area: 1/3/2/4;
@@ -1735,8 +1738,14 @@ code.anki-field-marker {
     flex-flow: row wrap;
     align-items: center;
 }
-.scan-input-content-cell[data-property=touch-pen-options] {
+.scan-input-content-cell[data-property=touch-options] {
     grid-area: 5/3/6/4;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+}
+.scan-input-content-cell[data-property=pen-options] {
+    grid-area: 6/3/7/4;
     display: flex;
     flex-flow: column nowrap;
     align-items: flex-start;
