Add support for exporting and importing dictionaries database.
It's super annoying to have to import dictionaries one at a time every
time you move across browsers or devices. This change adds an
experimental mechanism to export and import the entire database of
dictionaries so that users have to deal with only one source instead of
tracking tens of different dictionaries separately when migrating.

--- a/ext/css/settings.css
+++ b/ext/css/settings.css
@@ -680,6 +680,16 @@ select.short-height {
     padding-top: var(--padding);
     padding-right: var(--padding);
 }
+.settings-item-progress-report {
+    display: none;
+    font-weight: bold;
+    color: #4169e1;
+}
+.settings-item-error-report {
+    display: none;
+    font-weight: bold;
+    color: #8b0000;
+}
 
 
 /* Advanced settings */
