--- a/ext/css/display.css
+++ b/ext/css/display.css
@@ -808,6 +808,9 @@ button.action-button:active {
 
 
 /* Inflections */
+.inflection-hypotheses-list{
+    padding-inline-start: 20px;
+}
 .inflection-list {
     display: inline-block;
     color: var(--reason-text-color);
