--- a/ext/css/display.css
+++ b/ext/css/display.css
@@ -809,7 +809,8 @@ button.action-button:active {
 
 /* Inflections */
 .inflection-hypotheses-list{
-    padding-inline-start: 20px;
+    padding-inline-start: 0px;
+    list-style-type: none;
 }
 .inflection-list {
     display: inline-block;
