--- a/ext/data/templates/default-anki-field-templates.handlebars
+++ b/ext/data/templates/default-anki-field-templates.handlebars
@@ -1,19 +1,19 @@
 {{#*inline "glossary-single"}}
     {{~#unless brief~}}
         {{~#scope~}}
-            {{~#set "any" false}}{{/set~}}
+            {{~set "any" false~}}
             {{~#each definitionTags~}}
                 {{~#if (op "||" (op "!" @root.compactTags) (op "!" redundant))~}}
                     {{~#if (get "any")}}, {{else}}<i>({{/if~}}
                     {{name}}
-                    {{~#set "any" true}}{{/set~}}
+                    {{~set "any" true~}}
                 {{~/if~}}
             {{~/each~}}
             {{~#unless noDictionaryTag~}}
                 {{~#if (op "||" (op "!" @root.compactTags) (op "!==" dictionary (get "previousDictionary")))~}}
                     {{~#if (get "any")}}, {{else}}<i>({{/if~}}
                     {{dictionary}}
-                    {{~#set "any" true}}{{/set~}}
+                    {{~set "any" true~}}
                 {{~/if~}}
             {{~/unless~}}
             {{~#if (get "any")}})</i> {{/if~}}
@@ -27,7 +27,7 @@
     {{~else~}}
         <ul>{{#each glossary}}<li>{{formatGlossary ../dictionary .}}</li>{{/each}}</ul>
     {{~/if~}}
-    {{~#set "previousDictionary" dictionary~}}{{~/set~}}
+    {{~set "previousDictionary" dictionary~}}
 {{/inline}}
 
 {{#*inline "audio"}}
@@ -189,11 +189,11 @@
 
 {{#*inline "pitch-accent-item-disambiguation"}}
     {{~#scope~}}
-        {{~#set "exclusive" (spread exclusiveExpressions exclusiveReadings)}}{{/set~}}
+        {{~set "exclusive" (spread exclusiveExpressions exclusiveReadings)~}}
         {{~#if (op ">" (property (get "exclusive") "length") 0)~}}
-            {{~#set "separator" ""~}}{{/set~}}
+            {{~set "separator" ""~}}
             <em>({{#each (get "exclusive")~}}
-                {{~#get "separator"}}{{/get~}}{{{.}}}
+                {{~get "separator"~}}{{{.}}}
             {{~/each}} only) </em>
         {{~/if~}}
     {{~/scope~}}
@@ -267,10 +267,10 @@
 
 {{#*inline "stroke-count"}}
     {{~#scope~}}
-        {{~#set "found" false}}{{/set~}}
+        {{~set "found" false~}}
         {{~#each definition.stats.misc~}}
             {{~#if (op "===" name "strokes")~}}
-                {{~#set "found" true}}{{/set~}}
+                {{~set "found" true~}}
                 Stroke count: {{value}}
             {{~/if~}}
         {{~/each~}}
@@ -295,14 +295,14 @@
 {{#*inline "part-of-speech"}}
     {{~#scope~}}
         {{~#if (op "!==" definition.type "kanji")~}}
-            {{~#set "first" true}}{{/set~}}
+            {{~set "first" true~}}
             {{~#each definition.expressions~}}
                 {{~#each wordClasses~}}
                     {{~#unless (get (concat "used_" .))~}}
                         {{~> part-of-speech-pretty . ~}}
                         {{~#unless (get "first")}}, {{/unless~}}
-                        {{~#set (concat "used_" .) true~}}{{~/set~}}
-                        {{~#set "first" false~}}{{~/set~}}
+                        {{~set (concat "used_" .) true~}}
+                        {{~set "first" false~}}
                     {{~/unless~}}
                 {{~/each~}}
             {{~/each~}}
