Edit `vertical-align` style for structured content hyperlinks

--- a/ext/css/structured-content.css
+++ b/ext/css/structured-content.css
@@ -201,7 +201,7 @@
 
 /* Links */
 .gloss-link-text {
-    vertical-align: middle;
+    vertical-align: baseline;
 }
 .gloss-link-external-icon {
     display: inline-block;
