--- a/ext/css/settings.css
+++ b/ext/css/settings.css
@@ -2421,6 +2421,12 @@ input[type=number].dictionary-priority {
     flex: 1 1 auto;
 }
 
+.legal-npm {
+    flex-grow: 1;
+    height: 250px;
+    padding: 0.5em 1em;
+    border: 0;
+}
 
 /* Environment-specific display */
 :root[data-browser=unknown] [data-show-for-browser],
