--- a/ext/css/structured-content.css
+++ b/ext/css/structured-content.css
@@ -200,7 +200,7 @@
 
 /* Links */
 .gloss-link-text {
-    vertical-align: middle;
+    vertical-align: baseline;
 }
 .gloss-link-external-icon {
     display: inline-block;
