--- a/test/data/html/test-stylesheet.css
+++ b/test/data/html/test-stylesheet.css
@@ -20,7 +20,7 @@ p {
 }
 
 h1+p,
-h1+y-description {
+h1+test-description {
     margin-top: -0.67em;
 }
 
@@ -50,7 +50,7 @@ test-case::before {
 }
 
 .description,
-y-description {
+test-description {
     color: #444444;
     font-style: italic;
     display: block;
