--- a/ext/data/templates/default-anki-field-templates.handlebars
+++ b/ext/data/templates/default-anki-field-templates.handlebars
@@ -229,6 +229,25 @@
 {{/inline}}
 {{! End Pitch Accents }}
 
+{{#*inline "phonetic-transcriptions"}}
+    <ul>
+        {{~#each definition.transcriptions~}}
+            {{~#each transcriptions~}}
+                <li>
+                    {{~set "any" false~}}   
+                    {{~#each tags~}}
+                        {{~#if (get "any")}}, {{else}}<i>({{/if~}}
+                        {{name}}
+                        {{~set "any" true~}}
+                    {{~/each~}}
+                    {{~#if (get "any")}})</i> {{/if~}}      
+                    {{ipa}}
+                </li>
+            {{~/each~}}
+        {{~/each~}}
+    </ul>
+{{/inline}}
+
 {{#*inline "clipboard-image"}}
     {{~#if (hasMedia "clipboardImage")~}}
         <img src="{{getMedia "clipboardImage"}}" />
