fixing comments wip

--- a/ext/data/templates/default-anki-field-templates.handlebars
+++ b/ext/data/templates/default-anki-field-templates.handlebars
@@ -231,8 +231,8 @@
 
 {{#*inline "phonetic-transcriptions"}}
     <ul>
-        {{~#each definition.transcriptions~}}
-            {{~#each transcriptions~}}
+        {{~#each definition.phoneticTranscriptions~}}
+            {{~#each phoneticTranscriptions~}}
                 <li>
                     {{~set "any" false~}}   
                     {{~#each tags~}}
