--- a/ext/data/templates/default-anki-field-templates.handlebars
+++ b/ext/data/templates/default-anki-field-templates.handlebars
@@ -230,22 +230,24 @@
 {{! End Pitch Accents }}
 
 {{#*inline "phonetic-transcriptions"}}
-    <ul>
-        {{~#each definition.phoneticTranscriptions~}}
-            {{~#each phoneticTranscriptions~}}
-                <li>
-                    {{~set "any" false~}}   
-                    {{~#each tags~}}
-                        {{~#if (get "any")}}, {{else}}<i>({{/if~}}
-                        {{name}}
-                        {{~set "any" true~}}
-                    {{~/each~}}
-                    {{~#if (get "any")}})</i> {{/if~}}      
-                    {{ipa}}
-                </li>
+    {{~#if (op ">" definition.phoneticTranscriptions.length 0)~}}
+        <ul>
+            {{~#each definition.phoneticTranscriptions~}}
+                {{~#each phoneticTranscriptions~}}
+                    <li>
+                        {{~set "any" false~}}   
+                        {{~#each tags~}}
+                            {{~#if (get "any")}}, {{else}}<i>({{/if~}}
+                            {{name}}
+                            {{~set "any" true~}}
+                        {{~/each~}}
+                        {{~#if (get "any")}})</i> {{/if~}}      
+                        {{ipa}}
+                    </li>
+                {{~/each~}}
             {{~/each~}}
-        {{~/each~}}
-    </ul>
+        </ul>
+    {{~/if~}}
 {{/inline}}
 
 {{#*inline "clipboard-image"}}
